# asl-interpreter

./: .gitignore  Makefile  README.md  _config.yml  about.markdown  asl_reading.markdown  asl_writing.markdown  asli.opam  dune-project  index.markdown  prelude.asl  t.asl  t.mk  test.cc  test.v
.github/workflows/: AV_Scan_McAfee_Checker.yml  pull-request.yml
_posts/: 2024-12-19-demo.markdown  2024-12-20-using-interpreter.markdown  2025-05-08-extension-named-parameters.markdown  2025-05-09-extension-exception-markers.markdown  2025-05-09-extension-parameterized-records.markdown  2025-05-09-extension-topslice.markdown
demo/: simulator.c
docs/: _config.yml  about.md  index.md
docs/asl/: constants.md  events_and_maps.md  ffi.md  modules.md  subtypes.md  typechecking.md
docs/internal/: visitor.md
docs/ocaml/: tips.md
editors/: asl.vim
libASL/: asl.ott  asl_ast.ml  asl_fmt.ml  asl_fmt.mli  asl_parser.messages  asl_parser.mly  asl_utils.ml  asl_utils.mli  asl_visitor.ml  asl_visitor.mli  backend_c.ml  backend_c_new.ml  backend_c_new.mli  backend_cpp.ml  backend_verilog.ml  bin_file.ml  bin_file.mli  builtin_idents.ml  builtin_idents.mli  check_monomorphization.ml  chekhov.ml  chekhov.mli  commands.ml  commands.mli  configuration.ml  cpu.ml  cpu.mli  dune  elf.ml  error.ml  error.mli  eval.ml  eval.mli  flags.ml  flags.mli  format_utils.ml  format_utils.mli  global_checks.ml  global_checks.mli  ident.ml  (+64 more)
riscv/: Makefile  riscv.asl  simulator.c
runtime/: Makefile  dune
runtime/include/asl/: arith.h  bits1024.h  bits128.h  bits256.h  bits512.h  bits64.h  bits_template.h  error.h  integer.h  print.h  print_template.h  ram.h  runtime.h  runtime.hpp  trace.h  track_valid.h  utils.h
runtime/lib/: bits1024.c  bits128.c  bits256.c  bits512.c  bits64.c  bits_template_c.h  error.c  ram.c  sign_extend_template_c.h  trace.c
runtime/test/: Makefile  arith_test.cc  bits_test.cc  bits_test_template.h  error.cc  integer_test.cc  ram_test.cc
tests/: .test_backend.ml.swn  asl_test.ml  asl_utils_test.ml  aslutils.ml  backend_c.ml  backend_c_c23_test.ml  backend_c_fallback_test.ml  backend_c_new_test.ml  backend_c_test.ml  backend_verilog.ml  backend_verilog_test.ml  bitslice.ml  bittuples.ml  case.ml  constprop.ml  dune  lit.cfg  loadasl_test.ml  simplify_expr.ml  test_asl.ml  test_asli_project.expected  test_backend.ml  test_cases_backend.ml  test_loadasl.ml  test_project1.prj  test_project2.prj  test_utils.ml  test_utils_backend.ml  tuples.ml  xform_bitslices_test.ml  xform_bittuples_test.ml  xform_case_test.ml  xform_constprop_test.ml  xform_getset_test.ml  xform_int_bitslices_test.ml  xform_lower_test.ml  xform_mono_test.ml  xform_named_type_test.ml  xform_simplify_expr_test.ml  xform_tuples_test.ml  (+1 more)
tests/backends/: bits_add_00.asl  bits_and_00.asl  bits_append_00.asl  bits_asr_00.asl  bits_cvt_sint_00.asl  bits_cvt_uint_00.asl  bits_lsl_00.asl  bits_lsr_00.asl  bits_mk_mask_00.asl  bits_mul_00.asl  bits_not_00.asl  bits_ones_00.asl  bits_or_00.asl  bits_print_hex.asl  bits_replicate_00.asl  bits_sext_00.asl  bits_sub_00.asl  bits_xor_00.asl  bits_zeros_00.asl  bits_zext_00.asl  int_add_00.asl  int_align_00.asl  int_cvt_bits_00.asl  int_eq_00.asl  int_exact_div_00.asl  int_fdiv_00.asl  int_frem_00.asl  int_ge_00.asl  int_gt_00.asl  int_is_pow2_00.asl  int_le_00.asl  int_lt_00.asl  int_mod_pow2_00.asl  int_mul_00.asl  int_ne_00.asl  int_neg_00.asl  int_pow2_00.asl  int_print_dec.asl  int_print_hex.asl  int_shl_00.asl  (+9 more)
tests/lit/: lit.cfg
tests/lit/globalchecks/: eval_order_00.asl  eval_order_01.asl  eval_order_02.asl  eval_order_03.asl  eval_order_04.asl  eval_order_05.asl  eval_order_06.asl  noreturn_00.asl  rethrow_00.asl  rethrow_01.asl  rethrow_02.asl  rethrow_03.asl  rethrow_04.asl
tests/lit/parser/: directive_line.asl
tests/lit/tcheck/: conflicting_00.asl  conflicting_01.asl  function_arg_00.asl  immutable_00.asl  immutable_01.asl  immutable_02.asl  immutable_03.asl  immutable_04.asl  immutable_05.asl  immutable_06.asl  immutable_07.asl  immutable_08.asl  implicit_params_00.asl  implicit_params_01.asl  missing_00.asl  patterns_00.asl  record_init_00.asl  record_init_01.asl  records_00.asl  records_01.asl  records_02.asl  return_type_01.asl  setter_00.asl  setter_01.asl  shadowing_00.asl  shadowing_01.asl  shadowing_02.asl  shadowing_03.asl  subtypes_00.asl  type_constants_00.asl  type_width_00.asl
tests/lit/xform_bounded/: decl_fun_00.asl  expr_add_00.asl  expr_eq_00.asl  expr_ge_00.asl  expr_gt_00.asl  expr_if_00.asl  expr_if_01.asl  expr_le_00.asl  expr_lt_00.asl  expr_ne_00.asl  expr_neg_00.asl  expr_sub_00.asl  stmt_for_00.asl  stmt_let_00.asl
