; Copyright Arm Limited (c) 2017-2019
; Copyright (C) 2022-2024 Intel Corporation
; SPDX-Licence-Identifier: BSD-3-Clause

(ocamllex lexer)

(menhir
 (modules asl_parser)
 (flags --explain))

(library
 (name libASL)
 (public_name asli.libASL)
 (flags
  (:standard -w -27 -cclib -lstdc++))
 (modules
   asl_ast
   asl_fmt
   asl_parser
   asl_utils
   asl_visitor
   backend_c
   backend_verilog
   builtin_idents
   commands
   cpu
   elf
   error
   eval
   flags
   format_utils
   global_checks
   ident
   lattice
   lexer
   lexersupport
   loadASL
   obj32
   primops
   scope
   scopeStack
   tcheck
   utils
   value
   visitor
   xform_bitslices
   xform_bittuples
   xform_case
   xform_constprop
   xform_desugar
   xform_getset
   xform_int_bitslices
   xform_lower
   xform_mono
   xform_named_type
   xform_simplify_expr
   xform_tuples
   xform_valid)
 (libraries ocolor yojson zarith z3))


(env (_ (odoc (warnings fatal))))

(library
  (public_name asli.bin_file)
  (name bin_file)
  (flags (:standard -w -27))
  (modules bin_file)
  (libraries asli.libASL))

(plugin
  (name asli.bin_file)
  (libraries asli.bin_file)
  (site (asli plugins)))

(library
  (public_name asli.chekhov)
  (name chekhov)
  (flags (:standard -w -27))
  (modules chekhov)
  (libraries asli.libASL))

(plugin
  (name asli.chekhov)
  (libraries asli.chekhov)
  (site (asli plugins)))
