; Copyright Arm Limited (c) 2017-2019
; Copyright (C) 2022-2024 Intel Corporation
; SPDX-Licence-Identifier: BSD-3-Clause

(ocamllex lexer)

(menhir
 (modules asl_parser)
 (flags --explain --table))

(rule
 (targets asl_parser_messages.ml)
 (deps asl_parser.messages asl_parser.mly)
 (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(library
 (name libASL)
 (public_name asli.libASL)
 (flags
  (:standard -w -27 -cclib -lstdc++))
 (modules
   asl_ast
   asl_fmt
   asl_parser
   asl_parser_messages
   asl_utils
   asl_visitor
   backend_c
   backend_c_new
   backend_verilog
   backend_cpp
   builtin_idents
   commands
   configuration
   cpu
   error
   eval
   flags
   format_utils
   global_checks
   ident
   identset
   lattice
   lexer
   lexersupport
   loadASL
   loc
   primops
   runtime
   runtime_c23
   runtime_ac
   runtime_fallback
   scope
   scopeStack
   tcheck
   utils
   value
   visitor
   check_monomorphization
   xform_bitslices
   xform_bittuples
   xform_case
   xform_constprop
   xform_desugar
   xform_getset
   xform_int_bitslices
   xform_lower
   xform_mono
   xform_named_type
   xform_simplify_expr
   xform_tuples
   xform_valid
   xform_wrap)
 (libraries menhirLib ocolor yojson zarith z3))


(env (_ (odoc (warnings fatal))))

(library
  (public_name asli.bin_file)
  (name bin_file)
  (flags (:standard -w -27))
  (modules bin_file)
  (libraries asli.libASL))

(plugin
  (name asli.bin_file)
  (libraries asli.bin_file)
  (site (asli plugins)))

(library
  (public_name asli.chekhov)
  (name chekhov)
  (flags (:standard -w -27))
  (modules chekhov)
  (libraries asli.libASL))

(plugin
  (name asli.chekhov)
  (libraries asli.chekhov)
  (site (asli plugins)))

(library
  (public_name asli.elf)
  (name elf)
  (flags (:standard -w -27 -w -32 -w -34))
  (modules elf)
  (libraries asli.libASL))

(plugin
  (name asli.elf)
  (libraries asli.elf)
  (site (asli plugins)))

(library
  (public_name asli.metadata)
  (name metadata)
  (flags (:standard -w -27))
  (modules metadata)
  (libraries asli.libASL))

(plugin
  (name asli.metadata)
  (libraries asli.metadata)
  (site (asli plugins)))

(library
  (public_name asli.obj32)
  (name obj32)
  (flags (:standard -w -27))
  (modules obj32)
  (libraries asli.libASL))

(plugin
  (name asli.obj32)
  (libraries asli.obj32)
  (site (asli plugins)))
