(tests
 (names
  asl_test
  asl_utils_test
  backend_c_test
  backend_verilog_test
  loadasl_test
  xform_bitslices_test
  xform_bittuples_test
  xform_case_test
  xform_constprop_test
  xform_getset_test
  xform_int_bitslices_test
  xform_lower_test
  xform_mono_test
  xform_named_type_test
  xform_simplify_expr_test
  xform_tuples_test
  xform_valid_test)
 (modes exe)
 (flags
  (-cclib -lstdc++))
 (libraries alcotest libASL)
 (deps
  ../prelude.asl
  (glob_files ../runtime/include/asl/*)))

(rule
 (deps
  ../prelude.asl
  test_project1.prj
  test_project2.prj)
 (action
  (with-stdout-to test_asli_project.output
   (setenv ASL_PATH ".."
    (run ../bin/asli.exe --nobanner --project=test_project1.prj --project=test_project2.prj)))))

(rule
 (alias runtest)
 (action (diff test_asli_project.expected test_asli_project.output)))
